<resources>
    <string name="app_name">MyWhatsAth</string>
    <!--facebook app id-->
    <string name="facebook_app_id">571787797216822</string>
    <string name="fb_login_protocol_scheme">fb571787797216822</string>
    <!--Register Levels-->
    <string-array name="levels">
        <item>Amateur</item>
        <item>Semi-Pro</item>
        <item>Pro</item>
    </string-array>
    <!--Register Gender-->
    <string name="female">Female</string>
    <string name="male">Male</string>
    <!--Register Dropdown-->
    <string-array name="sports">
        <item>Pole Dancing</item>
        <item>Pilates</item>
        <item>Yoga</item>
        <item>Climbing</item>
        <item>Running</item>
        <item>Swimming</item>
        <item>Martial Arts</item>
    </string-array>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="appTitle">WhatsAth  </string>
    <!--Info Text-->
    <string name="userName">Name</string>
    <string name="userEmail">Email</string>
    <string name="userPwd">Password</string>
    <string name="userPwdConfirm">Confirm Password</string>
    <string name="userGender">Gender</string>
    <string name="userSport">Sport</string>
    <string name="userLevel">Level</string>
    <string name="userHearts">0</string>
    <!--Instruction Text-->
    <string name="registerForm">Register Form</string>
    <string name="profile">Profile</string>
    <string name="check">Check</string>
    <string name="pwdRule1">Password should be</string>
    <string name="pwdRule2">At least 8 characters</string>
    <string name="pwdRule3">Minimum one number</string>
    <string name="pwdMismatch">your password doesn\'t match</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="regDate">Registration Date</string>
    <string name="aboutMe">About Me</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="describe">Describe yourself :D</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="selectSport">Select your major sport</string>
    <string name="textMessage"> Text message</string>
    <string name="thisMessageSent">This message has been sent</string>
    <string name="thisMessageReceived">This message has been received</string>
    <string name="searchEtText">Find your fitness mate</string>
    <string name="placeText">Places to Go</string>
    <string name="shareFitness">Share Your Fitness with Us</string>
    <string name="headline">LATEST HEALTH NEWS</string>
    <string name="searchLocation">Search Location</string>
    <!--Bottom Drawer Menu-->
    <string name="menuProfile">profile</string>
    <string name="menuSearch">search</string>
    <string name="menuChat">chat</string>
    <string name="menuNews">news</string>
    <string name="menuGym">gym</string>
    <string name="menuLogout">logout</string>
    <!--Sports Type-->
    <string name="poledancing">Pole Dancing</string>
    <string name="pilates">Pilates</string>
    <string name="yoga">Yoga</string>
    <string name="climbing">Climbing</string>
    <string name="running">Running</string>
    <string name="swimming">Swimming</string>
    <string name="martialArts">Martial Arts</string>
    <!--Level Type-->
    <string name="amateur">Amateur</string>
    <string name="semiPro">Semi-Pro</string>
    <string name="pro">Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_second_maps2">SecondMapsActivity2</string>
    <string name="title_activity_place_search">PlaceSearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps_test">MapsTestActivity</string>
    <string name="title_activity_second_maps">SecondMapsActivity</string>


</resources>