<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <!--Top Wave Background-->
    <ImageView
        android:id="@+id/ivTopWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_top_wave" />

    <!--Main Form-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/signupBtn"
        android:layout_below="@+id/ivTopWave"
        android:descendantFocusability="blocksDescendants"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/registerForm"
                android:textAlignment="textStart"
                android:textColor="@color/primaryBlue"
                android:textSize="25sp"
                android:textStyle="bold" />
            <!--Name-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/userName"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/userEmail"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--Email Check Error-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/chkEmailFrameLl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <androidx.cardview.widget.CardView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:cardCornerRadius="25dp">

                        <ImageView
                            android:id="@+id/chkEmailFrameOne"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_baseline_error_outline_24" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/chkEmailFrameTv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|start"
                        android:text="This email address is already being used"
                        android:textColor="@color/red"
                        android:textSize="12sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/chkEmailBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_corner_yellow"
                    android:padding="0dp"
                    android:text="@string/check"
                    android:textSize="10sp" />

            </LinearLayout>

            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/pwdEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/userPwd"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Password Validation-->
            <LinearLayout
                android:id="@+id/validatePwdLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/pwdRule1"
                    android:textColor="@color/primaryDimBlue"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <!--Check1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/pwdFrameOne"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:cardBackgroundColor="#dcdcdc"
                        app:cardCornerRadius="25dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_baseline_check_24" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|start"
                        android:text="@string/pwdRule2"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
                <!--Check2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/pwdFrameTwo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:cardBackgroundColor="#dcdcdc"
                        app:cardCornerRadius="25dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_baseline_check_24" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|start"
                        android:text="@string/pwdRule3"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!--Password Confirm-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/confirmPwdEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/userPwdConfirm"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Password Confirm Error-->
            <LinearLayout
                android:id="@+id/confirmPwdErrLl"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/confirmPwdFrameOne"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:cardCornerRadius="25dp">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_baseline_error_outline_24" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center|start"
                    android:text="@string/pwdMismatch"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <!--Gender RadioGroup-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/userGender"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/genderRg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/femaleRb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/maleRb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/male" />
                </RadioGroup>
            </LinearLayout>

            <!--Sports Spinner-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/userSport"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sportTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:hint="@string/selectSport"
                    android:paddingLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:paddingVertical="5dp" />
            </LinearLayout>

            <!--Level RadioGroup-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/userLevel"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/levelRg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/amateurRb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/amateur" />

                    <RadioButton
                        android:id="@+id/semiProRb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/semiPro" />

                    <RadioButton
                        android:id="@+id/proRb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/pro" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!--Signup Button-->
    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ivBottomWave"
        android:background="@drawable/rounded_corner_yellow"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/signup"/>

    <!--Bottom Wave Background-->
    <ImageView
        android:id="@+id/ivBottomWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_bottom_wave" />

</RelativeLayout>