<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="5dp"
        android:paddingVertical="2dp"
        android:orientation="horizontal">

        <!--ProfileImage-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileIv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_person_24"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/primaryYellow"/>
        </LinearLayout>

        <!--Info-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical">
        <!--Name&Email-->
        <LinearLayout
            android:id="@+id/searchListLl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/nameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/userName"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/emailTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/userEmail"
                android:textStyle="italic"
                android:maxLines="1"
                android:textSize="12sp"/>
        </LinearLayout>
        <!--Gender&Hearts-->
        <LinearLayout
            android:id="@+id/searchListLl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/genderTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/userGender"
                android:maxLines="1"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/heartsCntTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"
                android:text="@string/userHearts"
                android:maxLines="1"
                android:textSize="12sp"/>
            <ImageView
                android:id="@+id/heartsIv"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="0.5"
                android:layout_marginTop="5dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_hearts_red"/>
        </LinearLayout>
            <!--Sport&Level-->
            <LinearLayout
                android:id="@+id/searchListLl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/sportTv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/userSport"
                    android:maxLines="1"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/levelTv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/userLevel"
                    android:maxLines="1"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>