<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PlaceActivity">

    <!--Toolbar-->
    <LinearLayout
        android:id="@+id/main_toolbar_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/abc_vector_test">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryYellow"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/toolbar_hg_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="42dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/toolbar_hg_90"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="42dp" />

                <TextView
                    android:id="@+id/toolBarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/appTitle"
                    android:drawableEnd="@drawable/ic_baseline_directions_run_white_24"
                    android:drawablePadding="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <TextView
        android:id="@+id/sloganTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeText"
        android:textStyle="bold|italic"
        android:textSize="34sp"
        android:padding="8dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/infoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/placeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_places"
        android:layout_marginHorizontal="10dp"
        />

    <!--Move to Map-->
    <Button
        android:id="@+id/mapBtn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/rounded_corner_yellow"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:padding="0dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/searchLocation"/>



</LinearLayout>